--- a/packages/filters/fake3d/package.json
+++ b/packages/filters/fake3d/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@vue-awesome-image/as-image",
+  "name": "@vue-awesome-image/filter-fake3d",
   "private": false,
-  "version": "1.0.0",
+  "version": "0.0.1",
   "module": "./dist/vue3/index.es.js",
   "main": "./dist/vue3/index.umd.js",
   "files": [
@@ -13,16 +13,14 @@
     "dev": "vite",
     "build": "npm run build:2 && npm run build:3 && npm run copy",
     "build:2": "patch-package && vue-demi-switch 2 vue2 && vite --config vite.config.vue2.ts build",
-    "build:3": "vue-demi-switch 3 && vite --config vite.config.vue3.ts build",
+    "build:3": "vue-demi-switch 3 && vite --config vite.config.vue3.ts build --watch",
     "copy": "node ./scripts/copy.js",
     "postinstall": "node ./scripts/postinstall.js",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@vue-awesome-image/filter-fake3d": "workspace:^0.0.1",
-    "@vue-awesome-image/providers": "workspace:^1.0.0",
+    "@gl-widget/gl-widget": "^1.1.3",
     "@vue/composition-api": "^1.4.9",
-    "rollup-plugin-dts": "^4.1.0",
     "vue-demi": "^0.12.1",
     "vue-template-compiler": "^2.6.14"
   },
