--- a/packages/image/package.json
+++ b/packages/image/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@vue-awesome-image/filter-fake3d": "workspace:^0.0.1",
     "@vue-awesome-image/providers": "workspace:^1.0.0",
+    "@vue/babel-helper-vue-jsx-merge-props": "^1.2.1",
     "@vue/composition-api": "^1.4.9",
     "rollup-plugin-dts": "^4.1.0",
     "vue-demi": "^0.12.1",
