--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-awesome-image",
+  "name": "@vue-awesome-image/monorepo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
