--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "@vue-awesome-image/monorepo",
-  "private": "false",
+  "publishConfig": {
+    "access": "public"
+  },
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
