--- a/packages/image/tsconfig.node.json
+++ b/packages/image/tsconfig.node.json
@@ -4,5 +4,5 @@
     "module": "esnext",
     "moduleResolution": "node"
   },
-  "include": ["vite.config.ts", "vite.config.vue2.ts", "vite.config.vue3.ts"]
+  "include": ["vite.config.ts", "vite.config.vue2.ts", "vite.config.vue3.ts", "vite-plugin-vue2-transition.ts"]
 }
