--- a/packages/filters/fake3d/package.json
+++ b/packages/filters/fake3d/package.json
@@ -3,7 +3,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "1.0.2",
+  "version": "1.0.10",
   "module": "./dist/index.es.js",
   "main": "./dist/index.umd.js",
   "files": [
@@ -13,8 +13,8 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "npm run build:2 && npm run build:3",
-    "build:2": "patch-package && vue-demi-switch 2 vue2 && vite --config vite.config.vue2.ts build",
+    "build": "npm run build:2 && npm run build:3 && npm run copy",
+    "build:2": "patch-package && vue-demi-switch 2 vue && vite --config vite.config.vue2.ts build",
     "build:3": "vue-demi-switch 3 && vite --config vite.config.vue3.ts build",
     "watch": "vue-demi-switch 3 && vite --config vite.config.vue3.ts build --watch",
     "copy": "node ./scripts/copy.js",
