--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,8 @@
 {
   "extends": "@antfu",
   "rules": {
+    "curly": "off",
+    "vue/html-self-closing": "off",
     "no-console": "off",
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": "off",
