--- a/website/package.json
+++ b/website/package.json
@@ -35,6 +35,7 @@
     "@graphql-codegen/typescript": "^2.4.1",
     "@graphql-codegen/typescript-operations": "^2.2.1",
     "@graphql-codegen/typescript-vue-apollo": "^3.2.1",
+    "@icon-park/vue-next": "^1.3.6",
     "@iconify-json/carbon": "^1.0.12",
     "@iconify-json/twemoji": "^1.0.2",
     "@nuxt/kit": "npm:@nuxt/kit-edge@3.0.0-27417467.467ab69",
