--- a/website/package.json
+++ b/website/package.json
@@ -35,10 +35,7 @@
     "@graphql-codegen/typescript": "^2.4.1",
     "@graphql-codegen/typescript-operations": "^2.2.1",
     "@graphql-codegen/typescript-vue-apollo": "^3.2.1",
-    "@highlightjs/vue-plugin": "^2.1.0",
     "@icon-park/vue-next": "^1.3.6",
-    "@iconify-json/carbon": "^1.0.12",
-    "@iconify-json/twemoji": "^1.0.2",
     "@nuxt/kit": "npm:@nuxt/kit-edge@3.0.0-27454426.4cefce4",
     "@pinia/nuxt": "^0.1.6",
     "@unocss/nuxt": "^0.16.4",
@@ -50,10 +47,7 @@
     "serverless": "^3.2.1",
     "serverless-domain-manager": "^6.0.2",
     "typescript": "^4.5.4",
-    "vite-plugin-svg-icons": "^1.0.5",
-    "vue-code-highlight": "^0.7.8",
-    "vue-highlightjs-all": "^2.0.0",
-    "vue3-highlightjs": "^1.0.5"
+    "vite-plugin-svg-icons": "^1.0.5"
   },
   "resolutions": {
     "vite": "2.7.13",
