docs: update introduction

--- a/docs/content/settings.json
+++ b/docs/content/settings.json
@@ -2,8 +2,8 @@
   "title": "Vue Awesome Image",
   "url": "vue-awesome-image.vercel.com",
   "logo": {
-    "light": "/logo-light.svg",
-    "dark": "/logo-dark.svg"
+    "light": "/logo.svg",
+    "dark": "/logo.svg"
   },
   "github": "newbeea/as-image",
   "twitter": "@nuxt_js"
