--- a/docs/package.json
+++ b/docs/package.json
@@ -12,9 +12,13 @@
     "@nuxt/content-theme-docs": "^0.11.0",
     "@nuxtjs/composition-api": "^0.32.0",
     "@vue-awesome-image/as-image": "^1.0.37",
-    "nuxt": "^2.15.8"
+    "@vue-awesome-image/filter-fake3d": "^1.0.21",
+    "nuxt": "^2.15.8",
+    "vue-demi": "^0.12.4"
   },
   "devDependencies": {
+    "@gl-widget/gl-widget": "^1.1.3",
+    "@vue-awesome-image/filter-glitch": "^1.0.1",
     "@vue-awesome-image/services": "^1.0.14"
   }
 }
