refactor: rename package

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@ lerna-debug.log*
 
 node_modules
 examples/vue3/node_modules
-dist
 dist-ssr
 *.local
 
@@ -25,3 +24,6 @@ dist-ssr
 *.sw?
 
 .history
+
+.nuxt3
+.output
