--- a/packages/filters/glitch/package.json
+++ b/packages/filters/glitch/package.json
@@ -27,8 +27,9 @@
     "vue-template-compiler": "^2.6.14"
   },
   "devDependencies": {
-    "@gl-widget/gl-widget": "^1.1.3",
+    "@awesome-image/image": "workspace:^0.0.0",
     "@antfu/eslint-config": "^0.16.1",
+    "@gl-widget/gl-widget": "^1.1.3",
     "@types/node": "^17.0.21",
     "@vitejs/plugin-vue": "^2.2.0",
     "@vitejs/plugin-vue-jsx": "^1.3.8",
