docs: update icon

--- a/docs/content/settings.json
+++ b/docs/content/settings.json
@@ -1,5 +1,5 @@
 {
-  "title": "Vue Awesome Image",
+  "title": "Awesome Image",
   "url": "vue-awesome-image.vercel.com",
   "logo": {
     "light": "/logo.svg",
