--- a/docs/content/settings.json
+++ b/docs/content/settings.json
@@ -5,6 +5,5 @@
     "light": "/logo.svg",
     "dark": "/logo.svg"
   },
-  "github": "newbeea/as-image",
-  "twitter": "@nuxt_js"
+  "github": "newbeea/as-image"
 }
