--- a/demo/package.json
+++ b/demo/package.json
@@ -9,34 +9,22 @@
     "start": "node .output/server/index.mjs"
   },
   "dependencies": {
-    "@apollo/client": "^3.5.6",
-    "@envelop/core": "^1.6.5",
+    "@awesome-image/filter-fake3d": "^1.0.21",
+    "@awesome-image/filter-glitch": "^0.0.0",
+    "@awesome-image/image": "^0.0.7",
+    "@awesome-image/services": "^0.0.0",
+    "@awesome-image/transition": "^0.0.4",
     "@iconify-json/carbon": "^1.1.2",
     "@iconify-json/twemoji": "^1.1.2",
     "@intlify/nuxt3": "^0.1.10",
-    "@nuxt3/apollo-module": "0.0.9",
-    "@nuxt3/graphql-codegen-module": "0.0.6",
-    "as-image": "^1.0.24",
-    "as-image-group": "^1.0.26",
-    "@vue-awesome-image/filter-fake3d": "^1.0.21",
-    "@vue-awesome-image/services": "^1.0.14",
     "@vue/composition-api": "^1.4.3",
-    "apollo-graphql": "^0.9.5",
-    "apollo-server-core": "^3.6.0",
     "class-validator": "^0.13.2",
-    "graphql": "^15.8.0",
-    "graphql-playground-html": "^1.6.30",
     "highlight.js": "^11.5.0",
     "pinia": "^2.0.6",
-    "type-graphql": "^1.1.1",
     "unenv": "^0.4.3"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.13.1",
-    "@graphql-codegen/cli": "^2.3.0",
-    "@graphql-codegen/typescript": "^2.4.1",
-    "@graphql-codegen/typescript-operations": "^2.2.1",
-    "@graphql-codegen/typescript-vue-apollo": "^3.2.1",
     "@icon-park/vue-next": "^1.3.6",
     "@nuxt/kit": "npm:@nuxt/kit-edge@3.0.0-27454426.4cefce4",
     "@pinia/nuxt": "^0.1.6",
