--- a/packages/filters/ascii/package.json
+++ b/packages/filters/ascii/package.json
@@ -28,7 +28,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.16.1",
-    "@awesome-image/image": "workspace:^0.0.0",
+    "@awesome-image/image": "workspace:*",
     "@gl-widget/gl-widget": "^1.1.3",
     "@tweenjs/tween.js": "^18.6.4",
     "@types/node": "^17.0.21",
