--- a/packages/filters/crt/package.json
+++ b/packages/filters/crt/package.json
@@ -27,7 +27,7 @@
     "vue-template-compiler": "^2.6.14"
   },
   "devDependencies": {
-    "@awesome-image/image": "workspace:^0.0.0",
+    "@awesome-image/image": "workspace:*",
     "@antfu/eslint-config": "^0.16.1",
     "@gl-widget/gl-widget": "^1.1.3",
     "@tweenjs/tween.js": "^18.6.4",
