--- a/packages/filters/glitch/package.json
+++ b/packages/filters/glitch/package.json
@@ -27,7 +27,7 @@
     "vue-template-compiler": "^2.6.14"
   },
   "devDependencies": {
-    "@awesome-image/image": "workspace:^0.0.0",
+    "@awesome-image/image": "workspace:*",
     "@antfu/eslint-config": "^0.16.1",
     "@gl-widget/gl-widget": "^1.1.3",
     "@types/node": "^17.0.21",
